syntax = "proto3";

package aspb;

import "aspb/anime_serie_episode.proto";
import "aspb/anime_serie_season.proto";
import "nfpb/meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";


message CreateAnimeSerieEpisodeRequest {
    AnimeSerieEpisodeRequest episode = 1;
    repeated nfpb.AnimeMetaRequest episodeMetas = 2;
}

message CreateAnimeSerieEpisodeResponse {
    AnimeSerieSeasonResponse season = 1;
    AnimeSerieEpisodeResponse episode = 2;
    repeated nfpb.AnimeMetaResponse episodeMetas = 3;
}
